# gba

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  bors.toml  build.bat  build.rs  build_asm_example.bat  crt0.s  devkitpro-pacman.deb.43  dump.bat  dump.sh  gba_link_script.ld  index.html  init.sh  linker.ld  make_example.sh  print.html  release-roms.bat  rustfmt.toml  searchindex.js  thumbv4-nintendo-agb.json  thumbv4-none-agb.json  thumbv4-none-eabi.json  todo_check.bat
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: ci-builds.yml  ci.yaml
backup/: asm_runtime.rs  fixed.rs  mem_fns.rs
backup/examples/: asm_scratch.rs  foo.txt  game.rs  hello.rs  mode3_realtime_example.rs
backup/src/: bios.rs  dma.rs  fixed.rs  mem_fns.rs  mgba.rs  prelude.rs  random.rs
book/: book.toml
book/src/: SUMMARY.md  bitmap-video.md  ch01.md  development-setup.md  gba-asm.md  introduction.md  io-registers.md  the-hardware-memory-map.md  volatile.md
book/src-bak/: 00-introduction-index.md  00-video-index.md  01-requirements.md  02-bios.md  02-fixed_only.md  02-goals_and_style.md  03-volatile_destination.md  04-sound.md  05-help_and_resources.md  06-link_cable.md  06-vram.md  07-oam.md  SUMMARY.md  gba_prng.md  regular_backgrounds.md
ch2/: index.html
docs/: ch01.html  development-setup.html  gba-asm.html  index.html  introduction.html  print.html  searchindex.js  searchindex.json
docs/00-introduction/: 00-index.html  01-requirements.html  02-goals_and_style.html  03-development-setup.html  04-hello-magic.html  05-help_and_resources.html  05-newtype.html  06-help_and_resources.html
docs/01-limitations/: 00-index.html  01-no_floats.html  02-core_only.html  03-volatile_destination.html
docs/01-quirks/: 00-index.html  01-no_std.html  02-fixed_only.html  03-volatile_destination.html  04-newtype.html  05-const_asserts.html
docs/02-concepts/: 00-index.html  01-cpu.html  02-bios.html  03-wram.html  04-io-registers.html  05-palram.html  06-vram.html  07-oam.html  08-rom.html  09-sram.html
docs/03-video/: 00-index.html  01-rgb15.html  TODO.html
docs/04-non-video/: 00-index.html  01-buttons.html  02-timers.html  03-dma.html  04-sound.html  05-interrupts.html  06-link_cable.html  06-network.html  07-game_pak.html
docs/05-examples/: 00-index.html  01-hello_magic.html  02-hello_world.html  03-light_cycle.html  04-bg_demo.html
docs/ch0/: index.html
docs/ch00/: index.html
docs/ch01/: hello1.html  hello2.html  index.html  io_registers.html  the_display_control_register.html  video_memory_intro.html  volatile.html
docs/ch02/: index.html  light_cycle.html  the_key_input_register.html  the_vcount_register.html
docs/ch03/: gba_memory.html  gba_memory_mapping.html  gba_prng.html  gba_rng.html  index.html  memory_game.html  object_basics.html  regular_backgrounds.html  regular_objects.html  tile_data.html  tiled_backgrounds.html
docs/ch1/: hello1.html  hello2.html  index.html  io_registers.html  the_display_control.html  the_display_control_register.html  video_memory_intro.html
docs/ch2/: gba_snake.html  index.html  light_cycle.html  the_key_input_register.html  the_vcount_register.html
docs/concepts/: bios.html  cpu.html  (+8 more)
examples/: asm_only.s  asm_viewer.rs  basic.rs  basic_keyinput.rs  bg_demo.rs  do_nothing.rs  foo.txt  game.rs  game_vblank_draw.rs  hello.rs  hello1.rs  hello2.rs  hello_magic.rs  hello_world.rs  instruction_inline.rs  irq.rs  key_demo.rs  keypad.rs  light_cycle.rs  memory_game.rs  mgba_panic_handler.rs  mode0.rs  mode3.rs  mode3_pong_example_game.rs  mode3_realtime_example.rs  mode4.rs  mode5.rs  no_lib_usage.rs  objects.rs  paddle_ball.rs  random_color.rs  snake.rs  test1_viewer.rs  test2_viewer.rs  test_savegame.rs  test_sram.rs  timer.rs  uart_echo.rs  video3_test.rs  video4_test.rs
examples-bak/: hello_world.rs  light_cycle.rs  mgba_panic_handler.rs
images/: CGA8x8thick.s
link_scripts/: mono_boot.ld
linker_scripts/: mono_boot.ld
src/: art.rs  asm.rs  asm_runtime.rs  base.rs  bios.rs  bit_utils.rs  builtins.rs  color.rs  core_extras.rs  critical_section.rs  debug.rs  debugging.rs  display_control.rs  div_fns.bak  dma.rs  ewram.rs  fixed.rs  fixed_point.rs  gba_cell.rs  gba_fixed.rs  header_and_runtime.S  interrupts.rs  intrinsics.rs  io.rs  io_registers.rs  irq.rs  iwram.rs  key_input.rs  keys.rs  lib.rs  macros.rs  mem.rs  mem_fns.rs  mgba.rs  mmio.rs  mmio_addresses.rs  mmio_types.rs  oam.rs  obj.rs  palram.rs  (+20 more)
(+246 files in other folders)
