[package]
name = "gba"
description = "A crate for 'raw' style GBA development. If you want a 'managed' experience, try the `agb` crate instead."
repository = "https://github.com/rust-console/gba"
version = "0.12.0"
edition = "2021"
license = "Zlib OR Apache-2.0 OR MIT"

[features]
default = ["on_gba"]
# SEE THE CRATE DOCS FOR SAFETY RELATED INFO REGARDING THIS FEATURE.
on_gba = []
# utilize `doc_cfg` where appropriate. requires nightly. intended mostly for use
# during docs.rs documentation generation.
doc_cfg = []
# Activates the `track_caller` attribute on various functions. Use of the
# `track_caller` attribute on a function adds a "secret" extra argument for the
# `Location` of the caller, which can reduce performance if the function is not
# inlined (meaning  `Location` is passed via the stack). This is only needed for
# debugging, and so it's off by default.
track_caller = []
# Applies the `no_mangle` attribute to the `memcpy` family of functions, causing
# them to override the same intrinsics from the `compiler_builtins` crate. When
# using this you will need to set cargo's `build-std-features` list to include
# "compiler-builtins-weak-intrinsics"
no_mangle_memcpy = []
# As above, but for `memset` and `memclr` fns.
no_mangle_memset = []

[dependencies]
voladdress = "1.4.0"
bitfrob = "1"
critical-section = { version = "1.1.2", features = [
  "restore-state-bool",
], optional = true }
bytemuck = { version = "1.16.0", optional = true }
fixed = { version = "1.27.0", default-features = false, optional = true }
bracer = "0.2.1"

[profile.dev]
opt-level = 3
incremental = false

[profile.dev.package."*"]
# this prevents `core` from having way too many debug assertions
debug-assertions = false

[profile.release]
codegen-units = 1   # increases build time, but also can increase inline opportunities
incremental = false

[package.metadata.docs.rs]
# When building the crate docs, we want to see the crate "as if" it was running
# on the GBA. This is the closest target that docs.rs supports by default and
# which *also* supports the `instruction_set` attribute to avoid build errors.
targets = ["armv5te-unknown-linux-gnueabi"]
features = ["doc_cfg"]
