[package]
name = "gba"
description = "A crate for 'raw' style GBA development. If you want a 'managed' experience, try the `agb` crate instead."
repository = "https://github.com/rust-console/gba"
version = "0.13.3"
edition = "2021"
license = "Zlib OR Apache-2.0 OR MIT"

[features]
default = ["track_caller", "on_gba"]
track_caller = []
on_gba = []
fixed = ["dep:fixed"]
# Provide the ARM AEABI memory functions, requires Nightly because they're
# written as naked functions for efficiency. They're `no_mangle` and they're
# placed in IWRAM.
aeabi_mem_fns = []

[dependencies]
voladdress = "1.3.0"
bitfrob = "1"
bracer = "0.3.1"
critical-section = { version = "1.2", features = [
  "restore-state-bool",
], optional = true }
fixed = { version = "1.28.0", optional = true }
bytemuck = "1.17.1"

[profile.dev]
opt-level = 3
incremental = false

[profile.dev.package."*"]
debug-assertions = false

[profile.release]
codegen-units = 1
incremental = false

[package.metadata.docs.rs]
# The crate can only be built for targets that have thumb-interworking support,
# because otherwise the instruction_set attribute can't be used.
targets = ["armv5te-unknown-linux-gnueabi"]
